# MachO-Reader

./: .bazelrc  .gitignore  .swiftformat  .swiftlint.yml  BUILD  CLAUDE.md  LICENSE  MODULE.bazel  Package.resolved  Package.swift  README.md  WORKSPACE  run.sh  swift_deps_index.json  test.sh
.github/workflows/: ci.yml  lint.yml  test.yml
Sources/Env/: BUILD.bazel  Env.swift
Sources/MachO-Reader/: main.swift
Sources/MachO-Reader/Extensions/: Data+Extensions.swift  String+Extensions.swift
Sources/MachO-Reader/Formatters/: CLIFormatter.swift
Sources/MachO-Reader/Helpers/: CPUType.swift  Cmd.swift  Magic.swift
Sources/MachO-Reader/Models/: FatHeader.swift  Formatters.swift  LoadCommand.swift  LoadCommandType.swift  MachOFile.swift  MachOHeader.swift  SemanticVersion.swift
Sources/MachO-Reader/Models/LoadCommandTypes/: BuildVersionCommand.swift  DylibCommand.swift  DysymtabCommand.swift  EntryPointCommand.swift  LinkedItDataCommand.swift  SegmentCommand.swift  SymtabCommand.swift  ThreadCommand.swift
Sources/MachOReaderCLI/: BUILD.bazel  CLIFormatter+DyldChainedFixupsReport.swift  CLIFormatter+Headers.swift  CLIFormatter+Helpers.swift  CLIFormatter+LoadCommands.swift  CLIFormatter.swift  DyldChainedFixups.swift  MachOReader.swift  String+Extensions.swift  main.swift
Sources/MachOReaderCLI/Commands/: DyldChainedFixups.swift  DyldChainedFixupsCommand.swift  MachOReaderCommand.swift
Sources/MachOReaderCLI/Extensions/: String+Extensions.swift
Sources/MachOReaderCLI/Formatting/: CLIFormatter.swift  DyldChainedFixups+Formatting.swift  FormattingConfig.swift  JSONFormatter.swift  LoadCommand+Formatting.swift  MachOFile+Formatting.swift  MachOHeader+Formatting.swift.swift  MachOHelpers+Formatting.swift  OutputFormat.swift  TextFormatter.swift
Sources/MachOReaderLib/: BUILD.bazel  CModels.swift  MachOReader.swift
Sources/MachOReaderLib/BinaryDecoding/: BinaryDecodable.swift  BinaryDecoder.swift  BinaryDecodingError.swift
Sources/MachOReaderLib/Extensions/: Array+Extensions.swift  BinaryInteger+Extensions.swift  Data+Extensions.swift  String+Extensions.swift
Sources/MachOReaderLib/Formatters/: CLIFormatter.swift
Sources/MachOReaderLib/Helpers/: BinaryDecodable.swift  CPUSubType.swift  CPUType.swift  Cmd.swift  FileType.swift  MachOHeader+Flags.swift  Magic.swift  Platform.swift  Readable.swift
Sources/MachOReaderLib/Models/: FatHeader.swift  Formatters.swift  LoadCommand.swift  LoadCommandType.swift  LoadCommandTypeRepresentable.swift  MachOFile.swift  MachOHeader.swift  SemanticVersion.swift
Sources/MachOReaderLib/Models/LoadCommandTypes/: BuildVersionCommand.swift  DyldInfoCommand.swift  DylibCommand.swift  DylinkerCommand.swift  DysymtabCommand.swift  EntryPointCommand.swift  LinkedItDataCommand.swift  SegmentCommand.swift  SourceVersionCommand.swift  SymtabCommand.swift  ThreadCommand.swift  UUIDCommand.swift
Sources/MachOReaderLib/Models/Reports/: DyldChainedFixupsReport.swift
Sources/MachOReaderLib/Reports/DyldChainedFixupsReport/: DyldChainedFixupsHeader.swift  DyldChainedFixupsReport.swift  DyldChainedImport.swift  DyldChainedPtrBind.swift  DyldChainedSegmentInfo.swift  DyldChainedSegmentPageInfo.swift  DyldChainedStartsInSegment.swift  Models.swift
Tests/EnvTests/: BUILD.bazel  EnvTests.swift
Tests/MachO-ReaderTests/: Constants.swift  FatHeaderTests.swift  MachOFileTests.swift  MachOHeaderTests.swift  MachO_ReaderTests.swift
Tests/MachOReaderLibTests/: BUILD.bazel  BinaryDecoderTests.swift  Constants.swift  DyldChainedFixupsReportTests.swift  FatHeaderTests.swift  Fixtures.swift  MachOFileTests.swift  MachOHeaderTests.swift  MagicTests.swift
Tests/MachOReaderLibTests/Fixtures/: helloworld
