load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")

swift_library(
    name = "MachOReaderLib",
    srcs = [
        "CModels.swift",
        "Extensions/Array+Extensions.swift",
        "Extensions/BinaryInteger+Extensions.swift",
        "Extensions/Data+Extensions.swift",
        "Extensions/String+Extensions.swift",
        "Helpers/CPUSubType.swift",
        "Helpers/CPUType.swift",
        "Helpers/Cmd.swift",
        "Helpers/FileType.swift",
        "Helpers/MachOHeader+Flags.swift",
        "Helpers/Magic.swift",
        "Helpers/Platform.swift",
        "Helpers/Readable.swift",
        "MachOReader.swift",
        "Models/FatHeader.swift",
        "Models/LoadCommand.swift",
        "Models/LoadCommandType.swift",
        "Models/LoadCommandTypeRepresentable.swift",
        "Models/LoadCommandTypes/BuildVersionCommand.swift",
        "Models/LoadCommandTypes/DyldInfoCommand.swift",
        "Models/LoadCommandTypes/DylibCommand.swift",
        "Models/LoadCommandTypes/DylinkerCommand.swift",
        "Models/LoadCommandTypes/DysymtabCommand.swift",
        "Models/LoadCommandTypes/EntryPointCommand.swift",
        "Models/LoadCommandTypes/LinkedItDataCommand.swift",
        "Models/LoadCommandTypes/SegmentCommand.swift",
        "Models/LoadCommandTypes/SourceVersionCommand.swift",
        "Models/LoadCommandTypes/SymtabCommand.swift",
        "Models/LoadCommandTypes/ThreadCommand.swift",
        "Models/LoadCommandTypes/UUIDCommand.swift",
        "Models/MachOFile.swift",
        "Models/MachOHeader.swift",
        "Models/SemanticVersion.swift",
        "Reports/DyldChainedFixupsReport/DyldChainedFixupsHeader.swift",
        "Reports/DyldChainedFixupsReport/DyldChainedFixupsReport.swift",
        "Reports/DyldChainedFixupsReport/DyldChainedImport.swift",
        "Reports/DyldChainedFixupsReport/DyldChainedPtrBind.swift",
        "Reports/DyldChainedFixupsReport/DyldChainedSegmentInfo.swift",
        "Reports/DyldChainedFixupsReport/DyldChainedSegmentPageInfo.swift",
    ],
    module_name = "MachOReaderLib",
    visibility = ["//visibility:public"],
)
