load("@build_bazel_rules_swift//swift:swift.bzl", "swift_test")

swift_test(
    name = "MachOReaderLibTests",
    srcs = [
        "Constants.swift",
        "DyldChainedFixupsReportTests.swift",
        "FatHeaderTests.swift",
        "Fixtures.swift",
        "MachOFileTests.swift",
        "MachOHeaderTests.swift",
    ],
    data = [":MachOReaderLibTestsFixtures"],
    module_name = "MachOReaderLibTests",
    deps = ["//Sources/MachOReaderLib"],
)

filegroup(
    name = "MachOReaderLibTestsFixtures",
    srcs = glob(["Fixtures/**/*"]),
)
